[package]
name = "housing-regression"
version = "0.1.0"
edition = "2024"

[dependencies]
# The burn ML framework. `wgpu` targets Metal on macOS (your M4 GPU).
# `autodiff` enables gradient computation. `train` gives us the Learner harness.
burn = { version = "0.21", features = ["wgpu", "autodiff", "train"] }

# CSV parsing
csv = "1.4"

# Serde lets us deserialize a CSV row directly into a Rust struct
serde = { version = "1", features = ["derive"] }
